Project Checkpoint Upload with Train-Test SPlit

--- a/CheckpointGroup038-Wi23.ipynb
+++ b/CheckpointGroup038-Wi23.ipynb
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1020,7 @@
        "4 -0.837082 -3.752037  -5.810417  -0.25273 -0.062171 -0.563458      -0.5  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1044,7 +1044,6 @@
     "\n",
     "# Normalize the data by subtracting the mean\n",
     "df_subtract_mean[data.columns] = df_subtract_mean[data.columns] - df_subtract_mean[data.columns].mean()\n",
-    "\n",
     "df_subtract_mean.head()"
    ]
   },
@@ -1091,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1679,7 +1678,7 @@
        "Diabetes              0.213081  0.272646  0.125427  0.381516  1.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1750,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1909,9 +1908,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train size: \n",
+      "(56553, 17)\n",
+      "(56553,)\n",
+      "\n",
+      "Test size: \n",
+      "(14139, 17)\n",
+      "(14139,)\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import torch\n",
@@ -1922,16 +1935,29 @@
     "from sklearn.datasets import make_classification\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X = np.array([[-1, -1], [-2, -1], [1, 1], [2, 1]])\n",
-    "X_test = np.array([[-2, -1], [1, 1], [-1, -1], [-2, -2]])\n",
-    "y = np.array([1, 1, 2, 2])\n",
+    "X_dummy = np.array([[-1, -1], [-2, -1], [1, 1], [2, 1]])\n",
+    "X_dummy_test = np.array([[-2, -1], [1, 1], [-1, -1], [-2, -2]])\n",
+    "y_dummy = np.array([1, 1, 2, 2])\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n"
+    "X = df_subtract_mean.drop(['Stroke'], axis=1)\n",
+    "y = df_subtract_mean['Stroke']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "print(\"Train size: \")\n",
+    "print(X_train.shape)\n",
+    "print(y_train.shape)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "print(\"Test size: \")\n",
+    "print(X_test.shape)\n",
+    "print(y_test.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1952,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1981,16 +2007,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NeuralNet(\n",
+       "  (l1): Linear(in_features=18, out_features=100, bias=True)\n",
+       "  (relu): ReLU()\n",
+       "  (l2): Linear(in_features=100, out_features=2, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2001,7 +2042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2010,7 +2051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2019,20 +2060,20 @@
        "array([1, 2, 1, 1])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "svm_clf = SVC()\n",
-    "svm_clf.fit(X, y)\n",
-    "svm_clf.predict(X_test)"
+    "svm_clf.fit(X_dummy, y_dummy)\n",
+    "svm_clf.predict(X_dummy_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2041,15 +2082,15 @@
        "array([1, 2, 1, 1])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rf_clf = RandomForestClassifier(max_depth=2, random_state=0)\n",
-    "rf_clf.fit(X, y)\n",
-    "svm_clf.predict(X_test)"
+    "rf_clf.fit(X_dummy, y_dummy)\n",
+    "svm_clf.predict(X_dummy_test)"
    ]
   },
   {
@@ -2103,7 +2144,7 @@
     "    | 03/01 | 6 PM  | EDA (Ryan)| Divide code sections between group members |\n",
     "    | 03/01 | 6 PM  | Data viz (Himanshi)| Divide code sections between group members |\n",
     "    | 03/01 | 6 PM  | Model exploration (Dominik)| Divide code sections between group members |\n",
-    "    | 03/07 | 12 PM | Clean data(Ryan)| Go through feedback received, make updates based on it|\n",
+    "    | 03/07 | 12 PM | Clean data (Ryan)| Go through feedback received, make updates based on it|\n",
     "    | 03/07 | 12 PM | Split data (Himanshi)| Go through feedback received, make updates based on it|\n",
     "    | 03/08 | Before 11:59 PM  | Project Check-In (all) | fill out the project check-in and submit it  |\n",
     "    | 3/10  |  When Avaliable  | Train Model (Dominik) | Start training the model, adjust hyperparameters as you go  |\n",
